--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.529.1",
+    "@aws-sdk/client-s3": "^3.535.0",
     "@aws-sdk/lib-dynamodb": "^3.529.1",
     "@aws-sdk/util-dynamodb": "^3.529.1",
     "@clerk/nextjs": "^4.29.9",
@@ -21,6 +22,7 @@
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "sharp": "^0.33.2",
     "svix": "^1.21.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
