--- a/package.json
+++ b/package.json
@@ -14,19 +14,24 @@
     "@aws-sdk/lib-dynamodb": "^3.529.1",
     "@aws-sdk/util-dynamodb": "^3.529.1",
     "@clerk/nextjs": "^4.29.9",
+    "@heroicons/react": "^2.1.1",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.12",
+    "icons": "^1.0.0",
     "lucide-react": "^0.356.0",
     "next": "14.1.3",
-    "react": "^18",
+    "react": "^18.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
+    "react-icons": "^5.0.1",
     "sharp": "^0.33.2",
+    "stripe": "^14.21.0",
     "svix": "^1.21.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
