--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "and": "^0.0.3",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -26,6 +27,7 @@
     "icons": "^1.0.0",
     "lucide-react": "^0.356.0",
     "next": "14.1.3",
+    "raw-body": "^2.5.2",
     "react": "^18.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
